--- a/Education.html
+++ b/Education.html
@@ -69,7 +69,8 @@
                                 <ul>
                                     <li>2022-Present</li>
                                     <li>Undergraduate, Marketing Program</li>
-                                
+                        <p> Education has always been a super important thing for me.  I know that education will play a super important role in my future!
+                                    </p>
                                 </ul>
                             </li>
                         </ol>
