--- a/Experience.html
+++ b/Experience.html
@@ -53,16 +53,22 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                        <p>One thing that I am excited to learn more about in the near future is the stock market!  I have attached a Tableau sheet below to show the current stock market conditions for Apple, Amazon, and Biogen.  I hope to someday master trading and using the stock market! </p>
+                        <p>I have had an awesome opportunity to work for CBRE!  I have worked for them for about 7 months.  CBRE is a real estate brookerage that is worldwide.  I have been able to be in their data department.  I specialize in the data analyst and development department.  
+                            Here is the link to their homepage:
+                            <h3>
+                            <a href="https://www.cbre.com"> 
+                                <p>CBRE HOME </a>
+                                </p>
+                           </h3>
+                        </p>
+                        <p>One thing that I am also excited to learn more about in the near future is the stock market!  I have attached a Tableau sheet below to show the current stock market conditions for Apple, Amazon, and Biogen.  I hope to someday master trading and using the stock market! </p>
                     </div>
                 </div>
             </div>
               <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p> <h5>Here is a Tableau of the current Stock market!</h5>
+                        <p> <h5>Here is a Tableau of the Stock market!</h5>
         <div class='tableauPlaceholder' id='viz1681851159595' style='position: relative'><noscript><a href='#'><img alt='Stock Tracking ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;St&#47;StocksTableau_16818510703880&#47;Stocks&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='StocksTableau_16818510703880&#47;Stocks' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;St&#47;StocksTableau_16818510703880&#47;Stocks&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1681851159595');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
                     </div>
                 </div>
