--- a/Skills.html
+++ b/Skills.html
@@ -53,9 +53,11 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                        <p>Through my opportunities at CBRE and IS201 I have been able to work a lot with excel.  Excel has become a skill that I can now utalize not just to show data, but to work for me to create what I want to see.  Data analytics has been something that is a skill that will grow overtime but it valueable none the less.
+                        </p>
+                        <p>
+                        I owned a photography business for a number of years throughout high school.  In this endevor I would shoot senior photos, wedding pictures, headshots, and everything in between.  I learned two great skills from this.  How to run an effective busienss, and deliver great customer service.  As well as the skills of photography and editing photos and videos.</p>
+                        <p>I would also consider myself very skilled in public relations and developing relationships.  I have worked many jobs that deal with clinets and developing and maintaing relationships with them.  This skill has been so valuable throughout my life!</p>
                     </div>
                 </div>
             </div>
